--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -119,27 +119,36 @@ ul.topnav li.dropdownIcon {
   padding-bottom: 40px;
   padding-top: 40px; }
 
-.contact-info div {
-  background-color: white;
-  margin: 0 auto;
-  margin-top: -120px;
-  position: relative;
-  width: 50%;
-  z-index: 999;
-  transition: .3s; }
+.contact-wrapper {
+  display: flex;
+  justify-content: space-around; }
   @media only screen and (max-width: 800px) {
-    .contact-info div {
+    .contact-wrapper {
+      flex-direction: column;
+      justify-content: center; } }
+
+.contact-info {
+  background-color: white;
+  padding: 40px; }
+  @media only screen and (max-width: 800px) {
+    .contact-info {
       margin-top: 10px;
       width: 100%; } }
-  .contact-info div h2 {
+  .contact-info h2 {
     padding-top: 20px;
     text-align: center;
     text-transform: uppercase; }
-  .contact-info div p {
+  .contact-info p {
     font-size: .8em;
     text-align: center; }
-  .contact-info div .hours {
+  .contact-info .hours {
     padding-bottom: 10px; }
+
+.contact-location {
+  flex-grow: 1; }
+  @media only screen and (max-width: 800px) {
+    .contact-location {
+      margin-top: 10px; } }
 
 .footer {
   align-items: center;
