--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -43,18 +43,23 @@ ul.topnav li.dropdownIcon {
   padding-top: 40px;
   position: relative;
   width: 100%; }
-  .header .header-logo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
+
+.header-wrapper {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+  .header-wrapper .header-logo {
     background-color: white;
+    border-radius: 50%;
     padding: 24px; }
-    .header .header-logo img {
+    .header-wrapper .header-logo img {
       display: block;
-      margin: 0 auto;
       max-width: 100%; }
+  .header-wrapper .glf-button {
+    padding: 24px; }
 
 .about {
   display: flex;
