--- a/src/static/css/styles.scss
+++ b/src/static/css/styles.scss
@@ -58,19 +58,40 @@ ul.topnav {
   padding-top: 40px;
   position: relative;
   width: 100%;
+  // .header-logo {
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  //   border-radius:50%;
+  //   background-color:white;
+  //   padding:24px;
+  //   img {
+  //     display: block;
+  //     margin: 0 auto;
+  //     max-width: 100%;
+  //   }
+  // }
+}
+
+.header-wrapper {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   .header-logo {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius:50%;
-    background-color:white;
-    padding:24px;
+    background-color: white;
+    border-radius: 50%;
+    padding: 24px;
     img {
       display: block;
-      margin: 0 auto;
       max-width: 100%;
     }
+  }
+  .glf-button {
+    padding: 24px;
   }
 }
 
