--- a/src/static/css/styles.scss
+++ b/src/static/css/styles.scss
@@ -173,7 +173,10 @@ ul.topnav {
   }
 }
 .modal-img {
-  max-width: 300px;
+  max-width: 100%;
+  @media only screen and (max-width: 800px) {
+    max-width: 300px;
+  }
 }
 
 // ################### CONTACT #####################
